<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.SignUpActivity">


    <TextView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/string_join"
        android:textAllCaps="true"
        android:textColor="@color/red_var"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/logoDesc"
        app:layout_constraintBottom_toTopOf="@+id/nameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_main" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/input_design"
        android:drawableStart="@drawable/name_final"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:autofillHints="@string/nameHint"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/red_var"
        android:textColorHint="@color/gray"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/nameError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nameError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:gravity="start"
        android:text=""
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/emailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/input_design"
        android:drawableStart="@drawable/email_final"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:autofillHints="@string/emailHint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/red_var"
        android:textColorHint="@color/gray"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/emailError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emailError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:gravity="start"
        android:text=""
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/passwordInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/input_design"
        android:drawableStart="@drawable/password"

        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:autofillHints="@string/passwordHint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/red_var"
        android:textColorHint="@color/gray"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:gravity="start"
        android:text=""
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/password2Input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password2Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/input_design"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/rePasswordHint"
        android:autofillHints="@string/rePasswordHint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/red_var"
        android:textColorHint="@color/gray"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/password2Error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/password2Error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:gravity="start"
        android:text=""
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/signupbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <ImageButton-->
<!--        android:id="@+id/showBtn"-->
<!--        android:layout_width="59dp"-->
<!--        android:layout_height="37dp"-->
<!--        android:layout_marginTop="4dp"-->
<!--        android:layout_marginBottom="4dp"-->
<!--        android:background="@color/white"-->
<!--        android:onClick="showPass"-->
<!--        android:src="@drawable/eye_unchecked"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/passwordInput"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/passwordInput"-->
<!--        app:layout_constraintHorizontal_bias="0.954"-->
<!--        app:layout_constraintStart_toStartOf="@+id/passwordInput"-->
<!--        app:layout_constraintTop_toTopOf="@+id/passwordInput"-->
<!--        app:layout_constraintVertical_bias="1.0" />-->

<!--    <ImageButton-->
<!--        android:id="@+id/showBtn2"-->
<!--        android:layout_width="59dp"-->
<!--        android:layout_height="37dp"-->
<!--        android:layout_marginTop="4dp"-->
<!--        android:layout_marginBottom="4dp"-->
<!--        android:background="@color/white"-->
<!--        android:onClick="showPass"-->
<!--        android:src="@drawable/eye_unchecked"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/password2Input"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/password2Input"-->
<!--        app:layout_constraintHorizontal_bias="0.954"-->
<!--        app:layout_constraintStart_toStartOf="@+id/password2Input"-->
<!--        app:layout_constraintTop_toTopOf="@+id/password2Input"-->
<!--        app:layout_constraintVertical_bias="1.0" />-->

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/signupbtn"
        android:onClick="signUp"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="44dp"
        android:gravity="end"
        android:onClick="goBack"
        android:text="@string/orSignIn"
        android:textColor="@color/red_var"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    Email-->

    <!--    Password -->


</androidx.constraintlayout.widget.ConstraintLayout>